# FastMCP

./: README.md  letter_counter.py  main.py  my_client.py  pyproject.toml
.cursor/: mcp.json
src/fastmcp/: __init__.py
