[project]
name = "fastmcp"
version = "0.1.0"
description = "FastMCP Project"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp"]

[tool.hatch.metadata]
allow-direct-references = true 

[tool.uv.sources]
fastmcp = { workspace = true }

[dependency-groups]
dev = [
    "fastmcp",
]
